@@ -1,5 +1,5 @@
 /*
- * $Id: tables.h,v 1.71 2010/01/11 04:31:39 sfeam Exp $
+ * $Id: tables.h,v 1.72 2010/02/07 06:39:47 sfeam Exp $
  */
 
 /* GNUPLOT - tables.h */
@@ -92,7 +92,7 @@ enum set_id {
     S_PALETTE, S_PM3D, S_COLORBOX, S_COLORNAMES,
     S_CBLABEL, S_CBRANGE, S_CBTICS, S_NOCBTICS, S_MCBTICS, S_NOMCBTICS,
     S_CBDATA, S_CBDTICS, S_NOCBDTICS, S_CBMTICS, S_NOCBMTICS,
-    S_OBJECT, S_PLOT, S_POINTSIZE, S_POLAR, S_PRINT,
+    S_OBJECT, S_PLOT, S_POINTSIZE, S_POLAR, S_PRINT, S_PSDIR,
     S_RRANGE, S_SAMPLES, S_SIZE, S_SURFACE, S_STYLE, 
     S_TABLE, S_TERMINAL, S_TERMOPTIONS,
     S_TICS, S_TICSCALE, S_TICSLEVEL, S_TIMEFMT, S_TIMESTAMP, S_TITLE,
